Update query endpoint
