# internal/types/types.go
@@ -1,13 +1,13 @@
 package types
 
 type EventFilter struct {
-	IDs        []string `json:"ids,omitempty"`
-	ProjectID  *string  `json:"project_id,omitempty"`
-	DistinctID *string  `json:"distinct_id,omitempty"`
-	Name       *string  `json:"name,omitempty"`
-	MessageID  *string  `json:"message_id,omitempty"`
-	UserID     *string  `json:"user_id,omitempty"`
-	SessionID  *string  `json:"session_id,omitempty"`
-	IP         *string  `json:"ip,omitempty"`
-	UserAgent  *string  `json:"user_agent,omitempty"`
+	IDs         []string `json:"ids,omitempty"`
+	ProjectIDs  []string `json:"project_ids,omitempty"`
+	DistinctIDs []string `json:"distinct_ids,omitempty"`
+	Names       []string `json:"names,omitempty"`
+	MessageIDs  []string `json:"message_ids,omitempty"`
+	UserIDs     []string `json:"user_ids,omitempty"`
+	SessionIDs  []string `json:"session_ids,omitempty"`
+	IPs         []string `json:"ips,omitempty"`
+	UserAgents  []string `json:"user_agents,omitempty"`
 }
